BG-3568: continue mmap implementation of storage backend