@@ -455,6 +455,11 @@ val commonSettings = Seq(
       case _ => Seq.empty
     }
   },
+  javaOptions ++= Seq(
+    "--add-modules jdk.incubator.foreign",
+    "--add-opens jdk.incubator.foreign/jdk.internal.foreign=ALL-UNNAMED",
+    "--add-opens java.base/jdk.internal.misc=ALL-UNNAMED"
+  ),
   Compile / console / scalacOptions --= Seq("-Ywarn-unused-import", "-Xfatal-warnings"),
   Test / testOptions += Tests.Argument("-l", "org.scalatest.tags.Slow"),
   Test / parallelExecution := false,
